# phantom-cipher

./: .dockerignore  .gitignore  Dockerfile  README.en.md  README.md  README.zh-CN.md  instrumentation.ts  next.config.mjs  package-lock.json  package.json  panda.config.ts  pnpm-lock.yaml  skills-lock.json  tsconfig.json
.claude/: settings.json
.github/workflows/: docker-publish.yml
app/: layout.tsx  manifest.ts  page.css.ts  page.tsx
backend/: Cargo.toml
backend/.cargo/: config.toml
backend/src/: db.rs  disconnect.rs  game.rs  main.rs  routes.rs  spa.rs  store.rs  sweeper.rs  types.rs
backend/src/routes/: actions.rs  mod.rs  players.rs  stats.rs  ws.rs  wx.rs
backend/src/routes/wx/: link.rs  login.rs  mod.rs  ops.rs  qrcode.rs  seccheck.rs  subscribe.rs  token.rs  updatable.rs
components/: Providers.tsx  Sketch.css.ts  Sketch.tsx  Tile.css.ts  Tile.tsx
components/room/: ActionZone.css.ts  ActionZone.tsx  Deck.css.ts  Deck.tsx  Header.css.ts  Header.tsx  JokerPlacement.css.ts  JokerPlacement.tsx  LogPanel.css.ts  LogPanel.tsx  MyRow.tsx  NamePromptView.css.ts  NamePromptView.tsx  NotificationStack.css.ts  NotificationStack.tsx  (+16 more)
docs/: wechat-server-apis.md
frontend/: .env.example  index.html  package.json  panda.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
lib/: actions.ts  atoms.ts  codenames.ts  db.ts  disconnect-timers.ts  game-store.ts  game.snapshot.test.ts  game.ts  sweeper.ts  types.ts
miniprogram/: README.md  app.js  app.json  app.wxss  project.config.json  project.private.config.json
styles/: global.css
types/: css.d.ts
(+134 files in other folders)
